fix: close final security review gaps